Refactor codebase: use Java records for DTOs and small inner classes, replace redundant explicit casting with pattern matching for instance checks, and ensure immutability by adding final modifiers where applicable.